Fix a bit of spacing

--- a/PersonalWebsite/Styles/site-home.scss
+++ b/PersonalWebsite/Styles/site-home.scss
@@ -200,7 +200,7 @@
                             }
 
                             i {
-                                width: 20px;
+                                min-width: 20px;
                             }
                         }
 
